--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,13 +7,10 @@ galaxy_info:
   license: GPLv3 or EUPL
   min_ansible_version: 2.7
   platforms:
-    - name: Debian
-      versions:
-        - stretch
     - name: Fedora
       versions:
-        - 27
-        - 28
+        - 29
+        - 30
     - name: EL
       versions:
         - 7
@@ -23,19 +20,21 @@ galaxy_info:
 
 dependencies:
   - role: amtega.check_platform
-    check_platform_distributions:
-      centos: 7
-      debian: 9
-      fedora: 27
-      rhel: 7
+    vars:
+      check_platform_distributions:
+        centos: 7
+        fedora: 29
+        rhel: 7
     tags:
       - role::ansible
 
   - role: amtega.packages
-    packages_os: "{{ ansible_packages_os }}"
-    packages_python: "{{ ansible_packages_python }}"
+    vars:
+      packages_os: "{{ ansible_packages_os }}"
+      packages_python: "{{ ansible_packages_python }}"
     when:
       - ansible_required_version is defined
       - ansible_required_version is not none
     tags:
       - role::ansible
+      - role::ansible::install
