--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,7 +1,7 @@
 ---
 # Role install tasks
 
-- name: create required directories
+- name: Create required directories
   file:
     path: "{{ item }}"
     state: directory
