--- a/vars/main.yml
+++ b/vars/main.yml
@@ -12,15 +12,19 @@ ansible_pip_version: >-
 # OS packages
 
 ansible_packages_os:
-  centos:
+  all:
     all:
       libselinux-python: present
+      openssh: present
+      sshpass: present
+  centos:
+    all:
       python-boto3: present
       python-jmespath: present
       python-netaddr: present
       python-passlib: present
       python-psutil: present
-      sshpass: present
+
   fedora:
     all:
       python3-libselinux: present
@@ -29,20 +33,13 @@ ansible_packages_os:
       python3-netaddr: present
       python3-passlib: present
       python3-psutil: present
-      sshpass: present
-    29:
-      libselinux-python: present
-    30:
-      libselinux-python: present
   rhel:
     all:
-      libselinux-python: present
       python-boto3: present
       python-jmespath: present
       python-netaddr: present
       python-passlib: present
       python-psutil: present
-      sshpass: present
 
 # Pyton packages
 
