--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,20 @@
 # Role tasks
 
+- name: Gather info
+  import_tasks: gather.yml
+  tags:
+    - role::ansible
+
+- name: Uninstall ansible
+  import_tasks: uninstall.yml
+  when: >-
+    ansible_detected_major_version != ansible_required_major_version
+    or ansible_detected_minor_version != ansible_required_minor_version
+    or ansible_uninstall_first | bool
+  tags:
+    - role::ansible
+    - role::ansible::uninstall
+
 - name: Install ansible
   import_tasks: install.yml
   tags:
