--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,20 +1,21 @@
 ---
 galaxy_info:
   role_name: ansible
+  namespace: amtega
   author: Juan Antonio Valiño García
   description: Setup an ansible control machine
   company: AMTEGA - Xunta de Galicia
   license: GPLv3 or EUPL
-  min_ansible_version: 2.9
+  min_ansible_version: 2.10
   platforms:
-    - name: Fedora
-      versions:
-        - 29
-        - 30
     - name: EL
       versions:
         - 7
         - 8
+    - name: Fedora
+      versions:
+        - 33
+        - 34
   galaxy_tags:
     - ansible
     - system
@@ -24,13 +25,5 @@ dependencies:
     vars:
       check_platform_distributions:
         centos: 7
-        fedora: 29
+        fedora: 33
         redhat: 7
-
-  - role: amtega.packages
-    vars:
-      packages_os: "{{ ansible_packages_os }}"
-      packages_python: "{{ ansible_packages_python }}"
-    when:
-      - ansible_required_version is defined
-      - ansible_required_version is not none
