--- a/molecule/resources/verify.yml
+++ b/molecule/resources/verify.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Get ansible version
       command: /var/lib/ansible/venv/bin/ansible --version
-      changed_when: false
+      changed_when: no
       register: ansible_version_result
 
     - name: Check that ansible version is correct
@@ -15,7 +15,7 @@
 
     - name: Read ansible config file
       command: cat {{ ansible_config_file_path }}
-      changed_when: false
+      changed_when: no
       register: read_config_result
 
     - name: Verify config file content
