--- a/vars/main.yml
+++ b/vars/main.yml
@@ -40,14 +40,6 @@ ansible_packages_os:
       sshpass: present
 
   centos:
-    6:
-      libselinux-python: present
-      python-boto3: present
-      python-jmespath: present
-      python-netaddr: present
-      python-passlib: present
-      python-psutil: present
-
     7:
       libselinux-python: present
       python-boto3: present
@@ -55,6 +47,12 @@ ansible_packages_os:
       python-netaddr: present
       python-passlib: present
       python-psutil: present
+      python3-libselinux: present
+      python3-boto3: present
+      python3-jmespath: present
+      python3-netaddr: present
+      python3-passlib: present
+      python3-psutil: present
 
     8:
       python3-libselinux: present
@@ -74,14 +72,6 @@ ansible_packages_os:
       python3-psutil: present
 
   redhat:
-    6:
-      libselinux-python: present
-      python-boto3: present
-      python-jmespath: present
-      python-netaddr: present
-      python-passlib: present
-      python-psutil: present
-
     7:
       libselinux-python: present
       python-boto3: present
@@ -89,6 +79,12 @@ ansible_packages_os:
       python-netaddr: present
       python-passlib: present
       python-psutil: present
+      python3-libselinux: present
+      python3-boto3: present
+      python3-jmespath: present
+      python3-netaddr: present
+      python3-passlib: present
+      python3-psutil: present
 
     8:
       python3-libselinux: present
