--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -7,6 +7,7 @@
         src: ansible.cfg.j2
         dest: "{{ ansible_config_file_path }}"
         mode: 0644
+      when: ansible_setup_config | bool
 
     - block:
         - name: Setup directory for ssh key
