--- a/tasks/directories.yml
+++ b/tasks/directories.yml
@@ -2,9 +2,9 @@
 # Directories related tasks
 
 - block:
-    - name: Check required Directories
+    - name: Check required directories
       stat:
-        path: "{{ config_dir_item }}"
+        path: "{{ config_directory_item }}"
       register: ansible_check_config_dir_result
       loop: >-
         {{ config_directories
@@ -20,7 +20,8 @@
         state: directory
         mode: "{{ ansible_setup_directories_mode }}"
       when: >-
-        not ansible_check_config_dir_result[config_directory_index].stat.exists
+        not ansible_check_config_dir_result.results
+            [config_directory_index].stat.exists
       loop: >-
         {{ config_directories
            | reject("equalto", none)
@@ -31,31 +32,18 @@
         index_var: config_directory_index
   vars:
     config_directories:
-      - >-
-        {{ (ansible_config_file_path | default(none) is not none)
-           | ternary(ansible_config_file_path
-                     | default("")
-                     | dirname,
-                     none) }}
-      - >-
-        {{ (ansible_defaults_inventory | default(none) is not none)
-           | tenrary(ansible_defaults_inventory
-                     | default("")
-                     | dirname,
-                     none) }}
-
+      - "{{ ansible_config_file_path | default('', true) | dirname }}"
+      - "{{ ansible_defaults_inventory | default('', true) | dirname }}"
       - "{{ ansible_defaults_roles_path }}"
       - "{{ ansible_defaults_library }}"
       - "{{ ansible_defaults_module_utils }}"
       - "{{ ansible_defaults_remote_tmp }}"
       - "{{ ansible_defaults_local_tmp }}"
-      
+
       - >-
-         {{ (ansible_defaults_plugin_filters_cfg | default(none) is not none)
-            | ternary(ansible_defaults_plugin_filters_cfg
-                      | default("")
-                      | dirname,
-                      none) }}
+        {{ ansible_defaults_plugin_filters_cfg
+           | default('', true)
+           | dirname }}
 
       - "{{ ansible_defaults_action_plugins }}"
       - "{{ ansible_defaults_cache_plugins }}"
@@ -68,9 +56,7 @@
       - "{{ ansible_defaults_test_plugins }}"
       - "{{ ansible_defaults_terminal_plugins }}"
       - "{{ ansible_defaults_strategy_plugins }}"
-      - "{{ ansible_defaults_log_path | dirname
-            if ansible_defaults_log_path is not none
-            else none }}"
+      - "{{ ansible_defaults_log_path | default('', true) | dirname }}"
   tags:
     - role::ansible
     - role::ansible::install
