--- a/molecule/update/molecule.yml
+++ b/molecule/update/molecule.yml
@@ -26,18 +26,18 @@ platforms:
       - molecule_hosts
       - molecule_hosts_centos
       - molecule_hosts_centos_7
-  - name: "fedora33-${INSTANCE_UUID:-1}"
-    image: fedora:33
-    groups:
-      - molecule_hosts
-      - molecule_hosts_fedora
-      - molecule_hosts_fedora_33
   - name: "fedora34-${INSTANCE_UUID:-1}"
     image: fedora:34
     groups:
       - molecule_hosts
       - molecule_hosts_fedora
       - molecule_hosts_fedora_34
+  - name: "fedora35-${INSTANCE_UUID:-1}"
+    image: fedora:35
+    groups:
+      - molecule_hosts
+      - molecule_hosts_fedora
+      - molecule_hosts_fedora_35
 provisioner:
   name: ansible
   playbooks:
@@ -47,7 +47,7 @@ provisioner:
     verify: ../resources/verify.yml
   config_options:
     defaults:
-      callback_enabled: profile_task
+      callbacks_enabled: profile_task
       action_plugins: $PWD/action_plugins
   inventory:
     hosts:
