--- a/vars/main.yml
+++ b/vars/main.yml
@@ -38,8 +38,7 @@ ansible_packages_os:
       gcc: present
       openssh: present
       sshpass: present
-
-  centos:
+  all:
     7:
       libselinux-python: present
       python-jmespath: present
@@ -49,7 +48,6 @@ ansible_packages_os:
       python3-libselinux: present
       python3-jmespath: present
       python3-psutil: present
-
     8:
       python3-libselinux: present
       python3-boto3: present
@@ -57,28 +55,8 @@ ansible_packages_os:
       python3-netaddr: present
       python3-passlib: present
       python3-psutil: present
-
   fedora:
     all:
-      python3-libselinux: present
-      python3-boto3: present
-      python3-jmespath: present
-      python3-netaddr: present
-      python3-passlib: present
-      python3-psutil: present
-
-  redhat:
-    7:
-      libselinux-python: present
-      python-jmespath: present
-      python-netaddr: present
-      python-psutil: present
-      python3-libselinux: present
-      python3-jmespath: present
-      python3-netaddr: present
-      python3-psutil: present
-
-    8:
       python3-libselinux: present
       python3-boto3: present
       python3-jmespath: present
