--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -15,11 +15,10 @@
     - name: Setup ansible directories
       include_tasks: directories.yml
       when: ansible_setup_directories | bool
-
   environment:
+    LANGUAGE: en_US.UTF-8
     ANSIBLE_SKIP_CONFLICT_CHECK: >-
       {{ (ansible_skip_conflict_check | bool) | ternary("1", "0") }}
-
   tags:
     - role::ansible
     - role::ansible::install
